<resources>
    <string name="app_name">Guru Cold Storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gr_dtl_item_name">Item Name: %1$s</string>
    <string name="gr_dtl_qty">Original Qty: %1$s</string>
    <string name="gr_dtl_in_stock">InStock: %1$s</string>
    <string name="gr_dtl_weight">Weight: %1$s</string>
    <string name="gr_dtl_rack">Rack : %1$s</string>
    <string name="gr_dtl_package_mark">Package Mark: %1$s</string>
    <string name="image_contentDescription">Content Description</string>
    <string name="GoodsReceived">Goods Received</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="Dispatch">Dispatch</string>
    <string name="close">Close</string>
    <string name="title_gr_details">Goods Received Details</string>
    <string name="dispatch_detail_grNo">GR No: %1$s</string>
    <string name="dispatch_detail_itemName">Item Name: %1$s</string>
    <string name="dispatch_detail_grQty">Original Qty: %1$s</string>
    <string name="dispatch_detail_dispQty">Dispatch Qty: %1$s</string>
    <string name="dispatch_detail_packageMark">Package Mark: %1$s</string>
    <string name="dispatch_detail_weight">Weight: %1$s</string>
    <string name="dispatch_detail_rack">Storage Rack: %1$s</string>
    <string name="title_dispatch_details">Dispatch Details</string>
    <string name="title_gr_list">GoodsReceived List</string>
    <string name="title_dispatch_list">Dispatch List</string>
    <string name="Invoice">Invoice</string>
    <string name="title_invoice_list">Invoice List</string>
    <string name="invoice_detail_itemName">Item Name: %1$s</string>
    <string name="invoice_detail_grQty">Original Qty: %1$s</string>
    <string name="invoice_detail_dispQty">Dispatch Qty: %1$s</string>
    <string name="invoice_detail_dispDate">Dispatch Date: %1$s</string>
    <string name="invoice_detail_packageMark">PackageMark: %1$s</string>
    <string name="invoice_detail_weight">Weight: %1$s</string>
    <string name="invoice_detail_duration">Storage Duration: %1$s</string>
    <string name="invoice_detail_charge">Charge: %1$s</string>
    <string name="invoice_detail_tax">Tax: %1$s</string>
    <string name="title_invoice_details">Invoice Details</string>
</resources>